--- a/POS/smart_pos/pom.xml
+++ b/POS/smart_pos/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>19.0.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
