--- a/POS/smart_pos/pom.xml
+++ b/POS/smart_pos/pom.xml
@@ -25,6 +25,11 @@
             <version>9.0.1</version>
         </dependency>
         <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.20.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.8.1</version>
